Fix styles for list on mobile

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -56,7 +56,7 @@ body.quiz::after {
 .quiz-list {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
   max-width: 800px;
   padding: 15px 0;
   margin: 0 auto;
@@ -67,8 +67,10 @@ body.quiz::after {
 }
 .quiz-list_item {
   width: 45%;
+  min-width: 300px;
   min-height: 250px;
   padding: 0 15px;
+  margin: 10px;
   margin-bottom: 15px;
   color: var(--black);
   text-align: center;
@@ -76,6 +78,7 @@ body.quiz::after {
   border-radius: 10px;
   border: 1px solid var(--blue);
   transition: box-shadow .25s;
+  box-sizing: border-box;
 }
 .quiz-list_item:hover {
   box-shadow: 0 0 5px 0 var(--blue);
